--- a/proyectoHotelGabarra/.env
+++ b/proyectoHotelGabarra/.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
-DB_PORT=3306
+DB_HOST=roundhouse.proxy.rlwy.net
+DB_PORT=20369
 DB_USER=root
-DB_PASSWORD=mi_contraseña_secreta
-DB_NAME=mi_base_de_datos
+DB_PASSWORD=VpehRwQqSLaDJkrdjIBfxrsZXYhLndRl
+DB_NAME=railway
