--- a/proyectoHotelGabarra/package.json
+++ b/proyectoHotelGabarra/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.0.0",
-    "express": "^4.17.1",
+    "express": "^4.19.2",
     "pg": "^8.7.1"
   },
   "devDependencies": {
